Update: v1.4 (global PDF + XLSX export, stanje vozila)

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vozila za otpis — evidencija (v1.2 · RSD)</title>
+  <title>Vozila za otpis — evidencija (v1.4 · XLSX & Global PDF)</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <!-- SheetJS za XLSX import/export (radi online na GitHub Pages) -->
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 </head>
 <body>
 <header class="topbar">
-  <h1>Vozila za otpis <small style="font-weight:normal;color:#777">v1.2 · RSD</small></h1>
+  <h1>Vozila za otpis <small style="font-weight:normal;color:#777">v1.4 · RSD · XLSX/CSV · Global PDF</small></h1>
   <div class="actions">
     <button id="btnExportJSON" title="Izvezi JSON fajl svih vozila">Izvezi JSON</button>
+    <button id="btnExportXLSX" title="Izvezi XLSX (Excel)">Izvezi XLSX</button>
+    <button id="btnExportPDF" title="Izvezi PDF svih vozila">Izvezi PDF (sva vozila)</button>
     <label class="file-label">
       <input type="file" id="importJSON" accept="application/json" />
       Uvezi JSON
@@ -19,6 +23,10 @@
     <label class="file-label">
       <input type="file" id="importCSV" accept=".csv,text/csv" />
       Uvezi CSV
+    </label>
+    <label class="file-label">
+      <input type="file" id="importXLSX" accept=".xlsx,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
+      Uvezi XLSX
     </label>
     <button id="btnClearAll" class="danger" title="Obriši sve iz memorije">Obriši sve</button>
   </div>
@@ -69,8 +77,8 @@
         <label>Procenjena vrednost (RSD)
           <input id="procena" type="number" min="0" step="1000" placeholder="npr. 120000" />
         </label>
-        <label>Stanje vožnje
-          <select id="stanjeVoznje">
+        <label>Stanje vozila
+          <select id="stanjeVozila">
             <option value="">— izaberi —</option>
             <option>U voznom stanju</option>
             <option>Nije u voznom stanju</option>
@@ -109,7 +117,7 @@
 </main>
 
 <footer class="foot">
-  <small>Offline prototip · Lokalna memorija pregledača (localStorage)</small>
+  <small>Offline prototip · Lokalna memorija pregledača (localStorage). XLSX import/export zahteva internet (CDN).</small>
 </footer>
 
 <template id="printTemplate">
